--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -49,7 +49,281 @@
         Government of the People's Republic of Bangladesh
       </p>
     </section>
+    <!-- card section -->
+    <main class="main-section">
+      <div class="card-section">
+        <div
+          class="card"
+          data-service-name="National Emergency Number"
+          data-hotline-number="999"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./emergency.png" alt="Emergency Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">National Emergency Number</h3>
+            <p class="service-name-sub">National Emergency</p>
+            <div class="hotline-number">999</div>
+            <div class="category-badge">All</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
 
+        <div
+          class="card"
+          data-service-name="Police Helpline Number"
+          data-hotline-number="999"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./police.png" alt="Police Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Police Helpline Number</h3>
+            <p class="service-name-sub">Police</p>
+            <div class="hotline-number">999</div>
+            <div class="category-badge">Police</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Fire Service Number"
+          data-hotline-number="999"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./fire-service.png" alt="Fire Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Fire Service Number</h3>
+            <p class="service-name-sub">Fire Service</p>
+            <div class="hotline-number">999</div>
+            <div class="category-badge">Fire</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Ambulance Service"
+          data-hotline-number="1994-999999"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./ambulance.png" alt="Ambulance Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Ambulance Service</h3>
+            <p class="service-name-sub">Ambulance</p>
+            <div class="hotline-number">1994-999999</div>
+            <div class="category-badge">Health</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Women & Child Helpline"
+          data-hotline-number="109"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./emergency.png" alt="Women & Child Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Women & Child Helpline</h3>
+            <p class="service-name-sub">Women & Child Help</p>
+            <div class="hotline-number">109</div>
+            <div class="category-badge">Help</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Anti-Corruption Helpline"
+          data-hotline-number="106"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./corruption.png" alt="Anti-Corruption Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Anti-Corruption Helpline</h3>
+            <p class="service-name-sub">Anti-Corruption</p>
+            <div class="hotline-number">106</div>
+            <div class="category-badge">Govt.</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Electricity Helpline"
+          data-hotline-number="16216"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./emergency.png" alt="Electricity Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Electricity Helpline</h3>
+            <p class="service-name-sub">Electricity Outage</p>
+            <div class="hotline-number">16216</div>
+            <div class="category-badge">Electricity</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Brac Helpline"
+          data-hotline-number="16445"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./brac.png" alt="Brac Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Brac Helpline</h3>
+            <p class="service-name-sub">Brac</p>
+            <div class="hotline-number">16445</div>
+            <div class="category-badge">NGO</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card"
+          data-service-name="Bangladesh Railway Helpline"
+          data-hotline-number="163"
+        >
+          <div class="card-header">
+            <div class="card-icon">
+              <img src="./emergency.png" alt="Railway Icon" />
+            </div>
+            <div class="card-favorite">
+              <i class="far fa-heart"></i>
+            </div>
+          </div>
+          <div class="card-content">
+            <h3 class="service-name-main">Bangladesh Railway Helpline</h3>
+            <p class="service-name-sub">Bangladesh Railway</p>
+            <div class="hotline-number">163</div>
+            <div class="category-badge">Travel</div>
+          </div>
+          <div class="card-actions">
+            <button class="copy-button">
+              <i class="far fa-copy"></i> Copy
+            </button>
+            <button class="call-button">
+              <i class="fas fa-phone-alt"></i> Call
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="history-section">
+        <div class="history-header">
+          <h4 class="history-title">
+            <i class="fas fa-history"></i> Call History
+          </h4>
+          <button class="clear-history-button">Clear</button>
+        </div>
+        <div class="call-history-list"></div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
