--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
   <body>
     <nav class="title">
       <div class="title-left">
-        <img src="./logo.png" class="logo" />
+        <img src="./assignment5/logo.png" class="logo" />
         <span class="title-name">Emergency Service</span>
       </div>
       <div class="title-right">
         <div class="interaction-item">
           <span id="heartCount">0</span>
-          <img src="heart.png" alt="Heart Icon" class="icon" />
+          <img src="./assignment5/heart.png" alt="Heart Icon" class="icon" />
         </div>
         <div class="interaction-item">
           <span id="coinCount">100</span>
-          <img src="coin.png" alt="Coin Icon" class="icon" />
+          <img src="./assignment5/coin.png" alt="Coin Icon" class="icon" />
         </div>
         <button id="copyButton" class="copy-button">
           <span id="copyCount">2</span> Copy
@@ -42,7 +42,7 @@
       </div>
     </nav>
     <section class="hero">
-      <img src="logo-dark.png" class="hero-logo" />
+      <img src="./assignment5/logo-dark.png" class="hero-logo" />
       <h1 class="hero-title">Emergency Service Directory</h1>
       <p class="hero-slogan">
         Government Emergency Services at Your Fingertips - A Project by
@@ -59,7 +59,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./emergency.png" alt="Emergency Icon" />
+              <img src="./assignment5/emergency.png" alt="Emergency Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -88,7 +88,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./police.png" alt="Police Icon" />
+              <img src="./assignment5/police.png" alt="Police Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -117,7 +117,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./fire-service.png" alt="Fire Icon" />
+              <img src="./assignment5/fire-service.png" alt="Fire Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -146,7 +146,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./ambulance.png" alt="Ambulance Icon" />
+              <img src="./assignment5/ambulance.png" alt="Ambulance Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -175,7 +175,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./emergency.png" alt="Women & Child Icon" />
+              <img src="./assignment5/emergency.png" alt="Women & Child Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -204,7 +204,10 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./corruption.png" alt="Anti-Corruption Icon" />
+              <img
+                src="./assignment5/emergency.png"
+                alt="Anti-Corruption Icon"
+              />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -233,7 +236,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./emergency.png" alt="Electricity Icon" />
+              <img src="./assignment5/emergency.png" alt="Electricity Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -262,7 +265,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./brac.png" alt="Brac Icon" />
+              <img src="./assignment5/brac.png" alt="Brac Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
@@ -291,7 +294,7 @@
         >
           <div class="card-header">
             <div class="card-icon">
-              <img src="./emergency.png" alt="Railway Icon" />
+              <img src="./assignment5/emergency.png" alt="Railway Icon" />
             </div>
             <div class="card-favorite">
               <i class="far fa-heart"></i>
